gccida/c3/init_pragma
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_pragma/src/c-pragma.c:961:47: error: use of undeclared identifier 'pragma_cb'
cpp_register_pragma( parse_in, 0LL, "pack", ( pragma_cb)handle_pragma_pack); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_pragma/src/c-pragma.c:962:47: error: use of undeclared identifier 'pragma_cb'
cpp_register_pragma( parse_in, 0LL, "weak", ( pragma_cb)handle_pragma_weak); 
                                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_pragma/src/obj/c-pragma.o] Error 1
